--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^7.2.2",
     "@angular/router": "^7.2.2",
     "@byteowls/capacitor-oauth2": "1.0.0-beta.4",
+    "@capacitor/android": "^1.0.0-beta.19",
     "@capacitor/cli": "^1.0.0-beta.19",
     "@capacitor/core": "^1.0.0-beta.19",
     "@capacitor/ios": "^1.0.0-beta.19",
